foir is placed need read its value when get it from servrside, rejected images in onhold panel done,images in preview also visible (functinalitywise need to decide correct UI), CRO2 showing error $resourceid is not a function , dedupe cases having error

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -564,11 +564,11 @@ svg:not (:root ) {
 
 
 .notify-scroll-container{
-	width: 1000px;
+	width: 100%;
     height: 100px;
     overflow-x: auto;
     overflow-y: hidden;
-    box-shadow: 0 0 10px #000;
+  /*  box-shadow: 0 0 10px #000;*/
 
 }
 
